--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
-[tool.poetry]
-name = "shanghaicopyright"
-version = "0.1.0"
+[tool]
+[tool.pdm]
+
+[project]
+name = ""
+version = ""
 description = ""
-authors = ["Silverowo <1581647952@qq.com>, nullqwertyuiop <null@member.fsf.org>, Little-LinNian <2544704967@qq.com>"]
-license = "AGPL-3.0 license"
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-aiohttp = "^3.8.3"
-pydantic = "^1.10.4"
-contextvars = "^2.4"
-asyncio = "^3.4.3"
-PyYAML = "^6.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+authors = [
+    {name = "Silverowo", email = "1581647952@qq.com"},
+]
+dependencies = [
+    "asyncio>=3.4.3",
+    "pathlib>=1.0.1",
+    "loguru>=0.6.0",
+    "aiohttp>=3.8.4",
+    "pydantic>=1.10.5",
+    "pyyaml>=6.0",
+]
+requires-python = ">=3.10"
+license = {text = "APGL v3"}
